--- a/style.css
+++ b/style.css
@@ -126,12 +126,13 @@ margin: auto;
     border-radius: 1rem;
     box-shadow: 1px 1px 2px 1px #b9b9b9;
     margin: auto;
+    border: 3px solid black;
 
 }
 
 .skill-progress > div{
-    border-radius: 1rem;
-    box-shadow: 1px 1px 5px 2px #989890;
+    border-radius: 0.8rem;
+    
 }
 
 .skill-name span{
@@ -141,13 +142,25 @@ margin: auto;
 
 }
 
+.mb-green {
+    background-color: green;
+}
+
 .mb-blue {
-    background-color: rgb(0, 26, 255);
+  background-color: rgb(0, 26, 255);
+}
+
+.mb-orange {
+  background-color: orange;
+}
+
+.mb-red {
+  background-color: red;
 }
 
 .ninty-percent {
-    height: inherit;
     width: 90%;
+    
 
 }
 
@@ -248,7 +261,7 @@ section:nth-child(2n+1){
 
   .timeline {
     width: 75%;
-    position: relative; 
+    position: relative;
 
   }
 
@@ -361,8 +374,8 @@ section:nth-child(2n+1){
     flex-wrap: wrap;
     flex-direction: column;
     font-size: 1.5rem;
-    
     word-spacing: 10px;
+    
     
   }
 
@@ -371,7 +384,7 @@ section:nth-child(2n+1){
   }
 
   #contact {
- background-image: linear-gradient(to right, rgb(72, 6, 253), rgb(48, 10, 218));
+ background-image: linear-gradient(to right, rgba(38, 3, 133, 0.692), rgb(48, 10, 218));
   }
 
   .contact-header {
@@ -459,6 +472,12 @@ section:nth-child(2n+1){
 }
 
 .footer-icons {
+  margin: auto;
+}
+
+#awards-1 {
+  display: flex;
+  flex-direction: column;
   margin: auto;
 }
 
